[skip ci] remove optional fields as required from api spec
